--- a/style.css
+++ b/style.css
@@ -281,6 +281,7 @@ li.archive {
   text-align: center;
   margin-right: 14px;
   margin-bottom: 14px;
+  font-size: 0;
 }
 
 li.archive:nth-child(3n+3) {
